add base layout

--- a/index.html
+++ b/index.html
@@ -22,5 +22,12 @@
 
 <body>
 
+    <div id="root" class="app-container">
+        <!-- CONTACTS -->
+        <aside class="contacts"></aside>
+
+        <!-- CHAT -->
+        <section class="chat"></section>
+    </div>
 </body>
 </html>
