add main and chat header

--- a/index.html
+++ b/index.html
@@ -79,8 +79,38 @@
             </section>
         </aside>
 
-        <!-- CHAT -->
-        <section class="chat"></section>
+        <!-- APP MAIN -->
+        <main class="app-main">
+            <!-- CHAT HEADER -->
+            <header class="chat-header">
+                <!-- Conversation Contact -->
+                <div class="conv-contact">
+                    <img class="avatar" src="./img/avatar_1.jpg" alt="avatar">
+                    <!-- Contact Data -->
+                    <div class="contact-data">
+                        <div class="contact-name">Michele</div>
+                        <div class="contact-status">Ultimo accesso oggi alle 10.35</div>
+                    </div>
+                </div>
+
+                <!-- Chat Header Icons -->
+                <div class="chat-header-icons">
+                    <a href="#"><i class="fas fa-search"></i></a>
+                    <a href="#"><i class="fas fa-paperclip"></i></a>
+                    <a href="#"><i class="fas fa-ellipsis-v"></i></a>
+                </div>
+            </header>
+
+            <!-- CHAT -->
+            <section class="chat">
+
+            </section>
+
+            <!-- CHAT FOOTER -->
+            <footer class="chat-footer">
+
+            </footer>
+        </main>
     </div>
 </body>
 </html>
