add chat footer

--- a/index.html
+++ b/index.html
@@ -108,7 +108,13 @@
 
             <!-- CHAT FOOTER -->
             <footer class="chat-footer">
-
+                <div class="emoji">
+                    <a href="#"><i class="far fa-smile"></i></a>
+                </div>
+                <input class="chat-input" type="text" placeholder="Scrivi un messaggio">
+                <div class="phone">
+                    <a href="#"><i class="fas fa-microphone"></i></a>
+                </div>
             </footer>
         </main>
     </div>
