--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@
 
             <!-- CHAT -->
             <section class="chat">
-
+                <div class="sent-line">
+                    <div class="message sent">Messaggio inviato</div>
+                </div>
+                <div class="received-line">
+                    <div class="message">Messaggio ricevuto</div>
+                </div>
             </section>
 
             <!-- CHAT FOOTER -->
