--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- LEFT ASIDE -->
         <aside class="left-aside">
             <!-- ASIDE HEADER -->
-            <header class="aside-header">
+            <header class="aside-header">                 
                 <!-- User -->
                 <div class="user flex jc-between ai-center">
                     <!-- User Avatar -->
@@ -67,8 +67,8 @@
             <!-- CONTACTS -->
             <section class="contacts">
                 <ul class="contacts-list">
-                    <li v-for="(contact, index) in contacts" class="contact flex ai-center">
-                        <img class="avatar" :src="'./img/avatar' + contact.avatar + '.jpg'" alt="avatar">
+                    <li v-for="(contact, index) in contacts" class="contact flex ai-center" :class="{active: isActive(index)}" @click="viewContact(index)">
+                        <img class="avatar" :src="'./img/avatar' + contact.avatar + '.jpg'" :alt="contact.name">
                         <div class="contact-name">{{contact.name}}</div>
                     </li>
                 </ul>
@@ -80,17 +80,17 @@
             <!-- CHAT HEADER -->
             <header class="chat-header flex jc-between ai-center">
                 <!-- Conversation Contact -->
-                <div class="conv-contact flex ai-center">
-                    <img class="avatar" src="./img/avatar_1.jpg" alt="avatar">
+                <div v-show="currentContact.index !== null" class="conv-contact flex ai-center">
+                    <img class="avatar" :src="`./img/avatar${currentContact.avatar}.jpg`" alt="avatar">
                     <!-- Contact Data -->
                     <div class="contact-data">
-                        <div class="contact-name">Michele</div>
+                        <div class="contact-name">{{currentContact.name}}</div>
                         <div class="contact-status">Ultimo accesso oggi alle 10.35</div>
                     </div>
                 </div>
 
                 <!-- Chat Header Icons -->
-                <div class="icons-group chat-header-icons">
+                <div v-show="currentContact.index !== null" class="icons-group chat-header-icons">
                     <a href="#"><i class="fas fa-search"></i></a>
                     <a href="#"><i class="fas fa-paperclip"></i></a>
                     <a href="#"><i class="fas fa-ellipsis-v"></i></a>
@@ -99,16 +99,10 @@
 
             <!-- CHAT -->
             <section class="chat">
-                <div class="sent-line flex">
-                    <div class="message sent">
-                        <div class="message-text">Messaggio inviato</div>
-                        <div class="message-time">10/01/2021 15:50:00</div>
-                    </div>
-                </div>
-                <div class="received-line flex">
-                    <div class="message">
-                        <div class="message-text">Messaggio ricevuto</div>
-                        <div class="message-time">10/01/2021 15:50:00</div>
+                <div v-for="message in currentContact.messages" class="message-line flex" :class="{sentline: message.status === 'sent'}">
+                    <div class="message" :class="{sent: message.status === 'sent'}">
+                        <div class="message-text">{{message.message}}</div>
+                        <div class="message-time">{{message.date}}</div>
                     </div>
                 </div>
             </section>
