--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <div class="user flex jc-between ai-center">
                     <!-- User Avatar -->
                     <div class="user-avatar flex ai-center">
-                        <img class="avatar" src="./img/avatar_io.jpg" alt="mine avatar">
-                        <span class="user-name">Nome Utente</span>
+                        <img class="avatar" :src="`./img/avatar${user.avatar}.jpg`" :alt="user.name">
+                        <span class="user-name">{{user.name}}</span>
                     </div>
                     <!-- User Icons -->
                     <div class="icons-group user-icons">
@@ -59,7 +59,8 @@
                         <!-- Search Button -->
                         <div class="search-btn flex jc-center ai-center"><i class="fas fa-search"></i></div>
                         <!-- Search Input -->
-                        <input v-model="contactSearch" class="input-text search-input" placeholder="Cerca o inizia una nuova chat" type="text">
+                        <input v-model.trim="contactSearch" class="input-text search-input" placeholder="Cerca o inizia una nuova chat" type="text">
+                        <i class="fas fa-times cancel" @click="clearSearch"></i>
                     </div>
                 </div>
             </header>
@@ -69,7 +70,9 @@
                 <ul class="contacts-list">
                     <li v-show="isVisible(index)" v-for="(contact, index) in contacts" class="contact flex ai-center" :class="{active: isActive(index)}" @click="viewContact(index)">
                         <img class="avatar" :src="'./img/avatar' + contact.avatar + '.jpg'" :alt="contact.name">
-                        <div class="contact-name">{{contact.name}}</div>
+                        <div class="contact-name">
+                            <span v-for="character in (contact.name.split(''))" :class="{highlight:isHighlight(character)}">{{ character }}</span>
+                        </div>
                     </li>
                 </ul>
             </section>
@@ -81,7 +84,7 @@
             <header class="chat-header flex jc-between ai-center">
                 <!-- Conversation Contact -->
                 <div v-show="currentContact.index !== null" class="conv-contact flex ai-center">
-                    <img class="avatar" :src="`./img/avatar${currentContact.avatar}.jpg`" alt="avatar">
+                    <img class="avatar" :src="`./img/avatar${currentContact.avatar}.jpg`" :alt="currentContact.name">
                     <!-- Contact Data -->
                     <div class="contact-data">
                         <div class="contact-name">{{currentContact.name}}</div>
@@ -109,10 +112,13 @@
 
             <!-- CHAT FOOTER -->
             <footer class="chat-footer flex ai-center">
-                <div class="emoji flex jc-center ai-center">
+                <!-- Emoji -->
+                <div v-show="viewEmoji" class="emoji-list"><span v-for="(item, index) in emoji" @click="addEmoji(index)">{{item}}</span></div>
+                <div class="emoji flex jc-center ai-center" @click="showEmoji">
                     <a href="#"><i class="far fa-smile"></i></a>
                 </div>
-                <input v-model="newMessage" class="input-text chat-input" type="text" placeholder="Scrivi un messaggio" @keyup.enter="sendMessage" :disabled="currentContact.index === null">
+                <!-- Message Input -->
+                <input v-model.trim="newMessage" class="input-text chat-input" type="text" placeholder="Scrivi un messaggio" @keyup.enter="sendMessage" :disabled="currentContact.index === null" ref="messageInput">
                 <div class="phone flex jc-center ai-center">
                     <a href="#"><i class="fas fa-microphone"></i></a>
                 </div>
