add close chat window

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                         <div class="message-time">{{item.date}}</div>
                     </div>
                 </div>
+                <i class="fas fa-times exit" @click="closeChat"></i>
             </section>
 
             <!-- CHAT FOOTER -->
